
syntax = "proto3";

package table;

option go_package = "github.com/coschain/contentos-go/app/table";

import "prototype/type.proto";
import "prototype/multi_id.proto";

message so_contract {
	prototype.contract_id      id               =      1;
    prototype.time_point_sec   created_time     =      2;
    string                     abi              =      3;
    prototype.coin             balance          =      4;
    bytes                      code             =      5;
    uint32                     apply_count      =      6;
    bool                       upgradeable      =      7;
    prototype.sha256           hash     		      =      8;
    string                     url              =      9;
    string                     describe              =      10;
      
}


message so_list_contract_by_created_time {
	prototype.time_point_sec	created_time = 1;
	prototype.contract_id   	id           = 2;
}


message so_list_contract_by_apply_count {
	uint32                  	apply_count  = 1;
	prototype.contract_id   	id           = 2;
}


message so_unique_contract_by_id {
	prototype.contract_id   	id           = 1;
}
